--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,3 +1,7 @@
 [editor_metadata]
 
-executable_path="C:/Users/HP OMEN/Desktop/Godot_v4.3-stable_mono_win64/Godot_v4.3-stable_mono_win64/Godot_v4.3-stable_mono_win64.exe"
+executable_path="C:/Users/James/Desktop/Godot_v4.3-stable_mono_win64/Godot_v4.3-stable_mono_win64.exe"
+
+[script_setup]
+
+last_selected_language="C#"
